[package]
name = "TrayNetX"
version = "1.0.0"
authors = ["Gergő Móricz <mo.geryy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ksni = "0.2.0"
local-ip-address = "0.4.4"
mac_address = "1.1.2"
reqwest = { version = "0.11.6", features = ["blocking"] }
terminal-clipboard = "0.3.0"